@@ -2,9 +2,7 @@ package com.pizza.pizzashop.services.PizzaService;
 
 import com.pizza.pizzashop.dtos.PizzaDTO;
 import com.pizza.pizzashop.entities.Pizza;
-import com.pizza.pizzashop.entities.PizzaIngredient;
 import com.pizza.pizzashop.mappers.PizzaMapper;
-import com.pizza.pizzashop.repositories.PizzaIngredientRepository;
 import com.pizza.pizzashop.repositories.PizzaRepository;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,67 +10,82 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+/**
+ * This class is an implementation of the PizzaService interface that provides methods for managing pizzas.
+ */
 @Service
 public class PizzaServiceImpl implements PizzaService {
     private final PizzaRepository pizzaRepository;
-    private final PizzaIngredientRepository ingredientRepository;
     private final PizzaMapper pizzaMapper;
 
     @Autowired
-    public PizzaServiceImpl(PizzaRepository pizzaRepository, PizzaIngredientRepository ingredientRepository, PizzaMapper pizzaMapper) {
+    public PizzaServiceImpl(PizzaRepository pizzaRepository, PizzaMapper pizzaMapper) {
         this.pizzaRepository = pizzaRepository;
-        this.ingredientRepository = ingredientRepository;
         this.pizzaMapper = pizzaMapper;
     }
 
+    /**
+     * Retrieves a list of all pizzas.
+     *
+     * @return A list of PizzaDTO representing all pizzas.
+     */
     @Override
     public List<PizzaDTO> getAllPizzas() {
         List<Pizza> pizzas = pizzaRepository.findAll();
         return pizzas.stream()
                 .map(pizzaMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Retrieves a pizza by its unique identifier.
+     *
+     * @param id The unique identifier of the pizza to retrieve.
+     * @return The PizzaDTO representing the pizza with the specified ID.
+     */
     @Override
     public PizzaDTO getPizzaById(Long id) {
         Optional<Pizza> pizza = pizzaRepository.findById(id);
         return pizza.map(pizzaMapper::toDTO).orElse(null);
     }
 
+    /**
+     * Creates a new pizza.
+     *
+     * @param pizzaDTO The PizzaDTO containing information for the new pizza.
+     * @return The PizzaDTO representing the newly created pizza.
+     */
     @Override
     public PizzaDTO createPizza(PizzaDTO pizzaDTO) {
         Pizza pizza = pizzaMapper.toEntity(pizzaDTO);
-        List<PizzaIngredient> ingredients = pizzaDTO.getIngredients().stream()
-                .map(ingredientDto -> ingredientRepository.findById(ingredientDto.getId())
-                        .orElseThrow(() -> new IllegalArgumentException("Invalid Ingredient ID")))
-                .toList();
         Pizza savedPizza = pizzaRepository.save(pizza);
         return pizzaMapper.toDTO(savedPizza);
     }
 
+    /**
+     * Updates an existing pizza with new information.
+     *
+     * @param id       The unique identifier of the pizza to update.
+     * @param pizzaDTO The PizzaDTO containing updated information for the pizza.
+     * @return The PizzaDTO representing the updated pizza.
+     */
     @Override
     public PizzaDTO updatePizza(Long id, PizzaDTO pizzaDTO) {
         Optional<Pizza> existingPizza = pizzaRepository.findById(id);
         if (existingPizza.isPresent()) {
-            Pizza pizza = existingPizza.get();
-            pizza.setName(pizzaDTO.getName());
-            pizza.setWeight(pizzaDTO.getWeight());
-            pizza.setPrice(pizzaDTO.getPrice());
-            pizza.setDescription(pizzaDTO.getDescription());
-            pizza.setImage(pizzaDTO.getImage());
-            List<PizzaIngredient> ingredients = pizzaDTO.getIngredients().stream()
-                    .map(ingredientDto -> ingredientRepository.findById(ingredientDto.getId())
-                            .orElseThrow(() -> new IllegalArgumentException("Invalid Ingredient ID")))
-                    .collect(Collectors.toList());
-            pizza.setIngredients(ingredients);
+            Pizza pizza = pizzaMapper.partialUpdate(pizzaDTO, existingPizza.get());
             Pizza updatedPizza = pizzaRepository.save(pizza);
             return pizzaMapper.toDTO(updatedPizza);
         }
         return null;
     }
 
+    /**
+     * Deletes a pizza by its unique identifier.
+     *
+     * @param id The unique identifier of the pizza to delete.
+     */
     @Override
     public void deletePizza(Long id) {
         pizzaRepository.deleteById(id);
